--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -8,15 +8,22 @@
 
 section {
     height: 100vh;
+    display: flex;
+    align-items: center
 }
 
-.pt-80 {
-    padding-top: 80px;
+.fg-1 {
+    flex-grow: 1;
 }
 
-.pb-40 {
-    padding-bottom: 40px;
+.w-100 {
+    width: 100%;
+
 }
+
+
+
+.pb-40 {}
 
 .gap-10 {
     gap: 10px;
@@ -128,12 +135,26 @@ h5 {
     box-shadow: 0px 13px 19px 0px #00000012;
     padding: 35px 30px 35px 40px;
 }
+.box-3 {
+    max-width: 100%;
+    box-shadow: 0px 13px 19px 0px #00000012;
+    padding: 35px 30px 35px 40px;
+}
+.box-4 {
+    max-width: 100%;
+    box-shadow: 0px 13px 19px 0px #00000012;
+    padding: 35px 30px 35px 40px;
+}
 
 @media (max-width:992px) {
     .col-12-lg {
         width: 100%;
         padding-left: 12px;
         padding-right: 12px;
+    }
+
+    .box {
+        margin-top: 20px;
     }
 
     .info {
@@ -158,5 +179,9 @@ h5 {
 
     section {
         height: auto;
+    }
+
+    .box-3 {
+        margin-bottom: 20px;
     }
 }
